fixed link spacing and text overflow in sidebar

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -11,6 +11,8 @@
 
 .link-box{
     height: 70%;
+    max-width: 100%;
+    min-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -19,8 +21,10 @@
 .link-box a, a:link{
     text-decoration: none;
     font-family: monospace;
-    font-size: 25px;
+    max-width: 100%;
+    font-size: 2.5vw;
     color: #f5f8fa;
+    min-height: 0;
     flex: 1;
 }
 
